# seqsetvis 1.1.6

* ssvFeature* and ssvSignal* added return_data paramter to skip plotting and
return data used.

# seqsetvis 1.1.5

* ssvBamFetch - added max_dupes parameter, default is Inf and shouldn't change
behavior. uses .rm_dupes() internally.
* bugfix: shift_anchor was causing a 1bp shift per call.
* bugfix: ssvBamFetch, strand of qgr and target_strand interacted incorrectly and
led to empty results for mismatches.

# seqsetvis 1.1.4

* ssvBamFetch - added splice_strategy parameter to control split reads for RNA-
seq data.  Defaults is "none" and shouldn't change behavior.
Uses .expand_cigar_dt() internally.

# seqsetvis 1.1.3

* BiocManager added to suggests and vignette.

# seqsetvis 1.1.2

* bugfix: viewGrangesWinSample/Summary_dt were both erroring when 0 reads were in window.
* bugfix: ggplot2 2.3.0 compatibility fix in ssvSignalLinePlotAgg()
* bugfix: col2hex now properly preserves character vector names
* bugfix: ssvFetch now properly allows NA for fragLens to disable fragment extension
* bugfix: ggellipse line_scale and color_scale were being ignored

# seqsetvis 1.1.1

* bugfix: skip rtracklayer::import.bw depedent tests on Windows OS

# seqsetvis 1.1.0

* seqsetvis is released!

# seqsetvis 0.99.20

Impacts existing scripts

* fetchWindowedBam is now ssvFetchBam.single
* fetchWindowedBamList is now ssvFetchBam
* fetchWindowedBigwig is now ssvFetchBigwig.single
* fetchWindowedBigwigList is now ssvFetchBigwig
* fetchWindowedSignalList is now ssvFetchSignal

Independent addititions

* anchor parameter for all fetch functions.  allows strand sensitive x assignment
and left or center reference point.
* added viewGRangesWinSummary_dt() -  allows summary statistic to be appled over
windows in contrast to sampling method. allows qgr to be varying width.
* renamed viewGRangesWindowed_dt() to viewGRangesWinSample_dt()

# seqsetvis 0.99.18

* updated package title
* updated vignette title

# seqsetvis 0.99.17
