@@ -460,51 +460,3 @@ quantileGRangesWidth = function(qgr,
     fwidth = ceiling(qwidth / win_size) * win_size
     return(fwidth)
 }
-
-#' Derive a new GRanges of consistent width based on quantile.
-#'
-#' Width is selected by rounding up to the lowest multiple of win_size greater
-#' than min_quantile quantile of widths.
-#'
-#' @param qgr GRanges. To be resized.
-#' @param min_quantile numeric [0,1]. The quantile level final width must be
-#' greater than. default is 0.75
-#' @param win_size integer > 0.  final width must be a multiple of win_size.
-#' @param anchor extend from center of from start (strand sensitive)
-#' @return a GRanges derived from qgr (length and order match).  All ranges
-#' are of same width and centered on old.  Width is at least minimum quantile
-#' and a multiple of win_size
-fixGRangesWidth = function(qgr,
-                           min_quantile = .75,
-                           win_size = 1,
-                           anchor = c("center", "start")[1]){
-    stopifnot(class(qgr) == "GRanges")
-    fwidth = quantileGRangesWidth(qgr, min_quantile, win_size)
-    qgr = setGRangesWidth(qgr = qgr, fwidth = fwidth, anchor = anchor)
-
-}
-
-#' Return GRanges with single width
-#'
-#' Essentially works like GenomicRanges::resize() but repeated applications
-#' of center do not cause rounding induced drift.
-#' @param qgr GRanges
-#' @param fwidth numeric width to apply
-#' @param anchor extend from center of from start (strand sensitive)
-#' @return GRanges that parallels qgr with fwidth applied according to anchor.
-setGRangesWidth = function(qgr, fwidth, anchor = c("center", "start")[1]){
-    stopifnot(class(qgr) == "GRanges")
-    stopifnot(is.numeric(fwidth))
-    stopifnot(anchor %in% c("center", "start"))
-    switch(anchor,
-           center = {
-               centerFixedSizeGRanges(qgr, fixed_size = fwidth)
-           },
-           start = {
-               resize(qgr, width = fwidth, fix = "start")
-           }
-    )
-}
-
-
-
